[movement/bug] Streamlined player movement and fixed a bug that caused the alien grid to fly off screen

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html,body {
   display: grid;
   grid-gap: .4em;
   grid-template-rows: .13fr .70fr .17fr;
-  grid-template-columns: .25fr .25fr .25fr .25fr;
+  grid-template-columns: .35fr .15fr .25fr .25fr;
   grid-template-areas: "top-left top-left top-right top-right"
                         "game game game game"
                         "btm-left btm-right btm-right btm-right";
